# quantum_state_validator

./: .gitattributes  .gitignore  00_smoke_test.ipynb  CHANGELOG.md  CONTRIBUTING.md  Décryptage des Fonctions de Validation d'États Quantiques.docx  Décryptage des Fonctions de Validation d'États Quantiques.tex  LICENSE  Module_data_generation_def.docx  Quiz fin jalon 1.docx  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
data/: README.md
docs/: RELEASING.md  STRATEGY.md
notebooks/: 00_smoke_test.ipynb  01_quantum_theory.ipynb  01_quantum_theory.pyi  02_test_data_generation.ipynb  03_test_invalid_states.ipynb  04__create_dataset.ipynb  05_eda_advanced.ipynb  06_test_preprocessing.ipynb  07_model_evaluation.ipynb  08_measurement_noise.ipynb  09_correlated_noise_multiclass.ipynb  10_calibration_drift.ipynb  11_preparation_qa.ipynb  12_scaling_and_sizing.ipynb  13_project_report.ipynb
reports/: AUDIT_2026-07-07.md  EMERGENT_ACCEPTANCE.md  SESSION_2026-07-07_dette_jalon4b.md  SESSION_2026-07-07_jalon4a.md  SESSION_2026-07-07_jalon4c.md  SESSION_2026-07-07_jalon4d.md  SESSION_2026-07-07_phase0.md  SESSION_2026-07-07_phase1.md  SESSION_2026-07-07_phase2.md  SESSION_2026-07-07_phase3.md  SESSION_2026-07-08_final_phase_1.md  SESSION_2026-07-08_jalon5a.md  SESSION_2026-07-08_jalon5b.md  main.tex
src/: api.py  data_generation.py  data_generation.pyi  features.py  paths.py  preparation.py  preprocessing.py  preprocessing.pyi  test_vscode.py
tests/: conftest.py  test_adapters.py  test_api.py  test_cli.py  test_data_generation.py  (+3 more)
(+14 files in other folders)
